# llm-movie-recommendation

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md
frontend/: index.html
frontend/src/components/chat/: ChatInput.tsx  ChatView.tsx  ConversationItem.tsx  Sidebar.tsx
frontend/src/pages/: Chat.tsx
frontend/src/providers/: WebSocketProvider.tsx
frontend/src/service/: ws.ts
frontend/src/store/: conversationstore.ts
mcp_server/: Dockerfile  Makefile  pyproject.toml
mcp_server/src/mcp/: app.py
populate_db/: Dockerfile  Makefile  README.md  pyproject.toml
populate_db/src/: populate_db.py
utils_package/: README.md  pyproject.toml
utils_package/src/db/: init_db.py
utils_package/src/system_config/: db_settings.py  entities.py  logger.py
utils_package/src/system_helpers/: embedder.py
utils_package/src/system_settings/: db_settings.py  mcp_settings.py
