[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi-mcp>=0.4.0",
    "mcp[cli]>=1.6.0",
    "pydantic-settings>=2.10.1",
]

[dependency-groups]
dev = [
    "ruff>=0.13.0",
]


[project.scripts]
mcp-qdrant = "mcp_server.server:main"
